--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md6 mb3">
                     <label for="Name">Nombre</label>
-                    <input type="text" class="form-control" id="Name" placeholder="" value="" autocomplete="off" required autofocus>
+                    <input type="text" class="form-control" id="nombre" placeholder="" value="" autocomplete="off" required autofocus>
                     <div class="invalid-feedback">
                         Nombre invalido
                     </div>
