--- a/welcome.html
+++ b/welcome.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <p id="mensajes">
-
-        </p>
+        <br>
+        <p id="mensajes"></p>
+        <br>
         <button id="btnEliminar" class="btn btn-primary btn-lg btn-block" type="button">Eliminar</button></button>
-        <a href="/index.html" style="float: right;">Regresar</a>
+        <a href="index.html" style="float: right;">Regresar</a>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="js/welcome.js"></script>
     <script src="https://getbootstrap.com/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <script src="https://getbootstrap.com/docs/5.2/examples/checkout/form-validation.js"></script>
